# siar_remote_packages

./: README.md
alert_db/: CMakeLists.txt  package.xml
alert_db/scripts/: generate_defects_videos.bash  generate_video.bash  iterate_bags.bash
alert_db/src/: get_images_from_bag.cpp
base_station/: CMakeLists.txt  package.xml
base_station/Perspectives/: gas_info.perspective
base_station/icons/: resource.qrc
base_station/launch/: new_base_station.launch  new_base_station_360.launch  start_base_station.launch  test_base_station.launch
base_station/src/: BaseStation.cpp  BaseStation.h  Comms.cpp  Comms.h
base_station/ui/: about_siar_gui.ui  alert_dialog.ui  controls.ui  s.ui  siar_gui.ui
base_station/web/: about.html  controls.html  web_resource.qrc
gather_data/: package.xml
gather_data/scripts/: gas.txt  gas_1_bag.txt  rssi.txt  rssi_1_bag.txt
