<?xml version="1.0"?>
<package format="2">
  <name>gather_data</name>
  <version>0.0.0</version>
  <description>This package has utilities for gathering gas sensor and RSSI data as a function of time and the odometric position</description>

  <maintainer email="daletei@upo.es">David Alejo</maintainer>


  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rssi_get</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>siar_driver</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>libelium_waspmote_gas_node</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>rssi_get</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>siar_driver</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>libelium_waspmote_gas_node</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rssi_get</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>siar_driver</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>libelium_waspmote_gas_node</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
